tests/test156.rael.exp
Error [tests/test156.rael:1:11]: Expected a whole number
| log "A" + 65.12
|           ^
